--- a/CaseStudy1.Rmd
+++ b/CaseStudy1.Rmd
@@ -16,14 +16,13 @@ Student 1 and Student 2 collaborated on the Introduction, analyses 1-5 in Sectio
 
 # 1 Introduction
 
-This report investigates the potential differences in birth weight between babies born to mothers who smoked during pregnancy and those who did not. Epidemiological research has consistently linked smoking during pregnancy to low birth weights and preterm birth. Birth weight is an indicator of a newborn's health, with lower birth weights associated with an increased risk of infant mortality. This study seeks to quantify the effects of maternal smoking on infant health through statistical analysis using data from the Child Health and Development Studies (CHDS) dataset. 
+This report investigates the potential differences in birth weight between babies born to mothers who smoked during pregnancy and those who did not. Epidemiological research has consistently linked smoking during pregnancy to low birth weights and preterm birth. Birth weight can be an indicator of a newborn's health, with lower birth weights associated with an increased risk of infant mortality. This study seeks to quantify the effects of maternal smoking on infant birth weight through statistical analysis using data from the Child Health and Development Studies (CHDS) dataset. 
 
 The CHDS dataset includes data on 1236 babies, all male, who were born between 1960 and 1967 to mothers enrolled in the Kaiser Health Plan in Oakland, California. Each baby was a single birth and survived for at least 28 days after birth. Variables in the dataset include birth weight, length of gestation, whether or not this was the mother's first pregnancy, mother's age, mother's height, mother's weight, and whether or not the mother was a smoker. 
 
-The primary objective is to answer the question: Is there a statistically significant difference in birth weights between babies born to mothers who smoked during pregnancy and those who did not? Specifically, we will explore the distribution of birth weights for both smokers and non-smokers, the incidence of low birth weight (under 100 ounces) in both groups, the potential variability in these comparisons based on different statistical methods. Using numerical, graphical, and incidence comparison approaches to answering this question, we found that maternal smoking significantly impacts birth weight. Babies born to mothers who smoked during pregnancy tended to have lower birth weights on average (~10 oz) compared to those born to non-smokers.
+The primary objective is to answer the question: Is there a statistically significant difference in birth weights between babies born to mothers who smoked during pregnancy and those who did not? Specifically, we will explore the distribution of birth weights for both smokers and non-smokers, the incidence of low birth weights (under 100 ounces) in both groups, and the potential variability in these comparisons based on different statistical methods. Using numerical, graphical, and incidence comparison approaches to answering this question, we found that maternal smoking significantly impacts birth weight. Babies born to mothers who smoked during pregnancy tended to have lower birth weights on average (~10 oz) compared to those born to non-smokers.
 
-The report is structured as follows: Section 1 addresses each of the research questions outlined above, focusing on the numerical, graphical, and incidence comparisons between the smoking and non-smoking groups; Section 2 covers the statistical analysis processes and results; Section 3 expands the analysis by examining other variables that may impact birth weight; and Section 4 discusses the conclusions and implications of the results. Overall, this report will determine whether the difference in weight between babies born to mothers who smoked during pregnancy and those who did not is significant for the health of the baby.
-
+The report is structured as follows: Section 1 addresses each of the research questions outlined above, focusing on the numerical, graphical, and incidence comparisons between the smoking and non-smoking groups; Section 2 covers the statistical analysis processes and results; Section 3 expands the analysis by examining other variables that may impact birth weight; and Section 4 discusses the conclusions, limitations, and implications of the results. Overall, this report will determine whether the difference in weight between babies born to mothers who smoked during pregnancy and those who did not is significant for the health of the baby.
 
 # 2 Analysis
 
@@ -74,7 +73,7 @@ cleaned_df <- subset(cleaned_df, height <= 85)
 cleaned_df <- subset(cleaned_df, age <= 60)
 ```
 
-Several outliers and inconsistencies were identified in the data, which may distort the results of our analyses. The dataset includes a binary indicator for whether the pregnancy was the first for the mother. Since parity can either take on 0 (first pregnancy) or 1 (subsequent pregnancy), we removed any entries that were not 0 or 1. The current maximum height of a woman, based on the Guinness World Record, is 7 feet 0.7 inch (84.7 inches); we set the upper limit for height at 85 inches to account for potential data entry errors or unreasonable outliers. The longest pregnancy recorded lasted 375 days; gestation values exceeding this were excluded from the dataset as unrealistic outliers. We set an upper weight limit of 500 pounds, which is extremely high but not impossible. Women weighing over 500 lbs are not too rare, but are typically associated with severe health conditions, which would significantly skew the dataset. Excluding such outliers helps avoids distorting results. Similarly, we set the maximum reasonable age for a mother's age to be 60 years. Pregnancies above this age are exceptionally rare and could result from data recording errors.
+Several outliers and inconsistencies were identified in the data, which may distort the results of our analyses. The dataset includes a binary indicator for whether the pregnancy was the first for the mother. Since parity can only take on 0 (first pregnancy) or 1 (subsequent pregnancy), we removed any entries that were not 0 or 1. The current maximum height of a woman, based on the Guinness World Record, is 7 feet 0.7 inch (84.7 inches); we set the upper limit for height at 85 inches to account for potential data entry errors or unreasonable outliers. The longest pregnancy recorded lasted 375 days; gestation values exceeding this were excluded from the dataset as unrealistic outliers. We set an upper weight limit of 500 pounds, which is extremely high but not impossible. Women weighing over 500 lbs are not too rare, but are typically associated with severe health conditions, which would significantly skew the dataset. Excluding such outliers helps avoids distorting results. Similarly, we set the maximum reasonable age for a mother's age to be 60 years. Pregnancies above this age are exceptionally rare and could result from data recording errors.
 
 After cleaning the data, we plotted the distributions of each variable to confirm that the cleaning process successfully addressed the outliers and inconsistencies. These graphs, presented in the Appendix, reflect the revised dataset and provide a more accurate representation of the variables.
 
@@ -231,11 +230,11 @@ As shown in the graph above, the incidences of low-weight babies in smoking moth
 
 ### Numerical Analysis
 
-The first type of analysis used was numerical, where we compared the minimum, maximum, mean, standard deviation, median, and quartile values of the two distributions (non-smoking women and smoking women). Numerical analysis provide concrete quantifications that allowed us to highlight the key information in the data to directly compare the two distributions. However, using numerical analysis dismisses information about the shape of the data that may be important for analysis. For example, if the data were skewed, the means and standard deviations would be less reliable due to their susceptibility to outliers.
+The first type of analysis used was numerical, where we compared the minimum, maximum, mean, standard deviation, median, and quartile values of the two distributions (non-smoking women and smoking women). Numerical analysis provides concrete quantifications that allowed us to highlight the key information in the data to directly compare the two distributions. However, using numerical analysis dismisses information about the shape of the data that may be important for analysis. For example, if the data were skewed, the means and standard deviations would be less reliable due to their susceptibility to outliers.
 
 ### Graphical Analysis
 
-The second type of analysis used was graphical, where we graphed the two distributions to visualize their general shapes. While graphs make it easier to visualize shape, trends, patterns, and outliers, they don't provide specific numerical values or statistical evidence. So while graphical analysis allows us to visualize any trends, numerical is analysis is still necessary for proving the significance of those observations. In other words, numerical and graphical analysis complement each other and can be used hand-in-hand for statistical analysis.
+The second type of analysis used was graphical, where we graphed the two distributions to visualize their general shapes. While graphs make it easier to visualize shape, trends, patterns, and outliers, they don't provide specific numerical values or statistical evidence. So while graphical analysis allows us to visualize any trends, numerical analysis is still necessary for proving the significance of those observations. In other words, numerical and graphical analysis complement each other and can be used hand-in-hand for statistical analysis.
 
 ### Incidence Analysis
 
@@ -317,6 +316,7 @@ Other limitations of this dataset may also affect the applicability of our resul
 - The dataset only provides data about women in 1960 to 1967, meaning the results from this analysis may no longer be relevant to women in the present time. 
 - The absence of data on female babies and multiple-birth babies also limits the applicability of our findings.
 - Recording only one occurrence of the mother's weight, even though how it changes throughout the course of the pregnancy may also be an important factor to consider in the analysis.
+- Some of the data may have been self reported (considering some of the unreasonable values in the dataset that were Section 2.1 Data Processing) which can lead to some biases.
 - The aforementioned limitations with specific locations and health plans.
 
 We acknowledge the presence of these limitations and understand their affects on the generalizability of our results.
